[package]
name = "my_project"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json", "cookies"] }
whoami = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "my_binary"
path = "Honesty.rs"


[profile.dev]
incremental = false
